# cv-creator-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-watch.sh  main.py  pyproject.toml
api/: api.py
app/: main.py
app/api/: schemas.py
app/api/core/: db.py  models.py
app/api/routers/: user.py
app/api/schemas/: user.py
app/core/: db.py
app/core/models/: __init__.py  user.py  verification_code.py
app/migrations/: env.py
app/services/: token_service.py  verification_service.py
app/utils/email_templates/: email_verification.html
